@@ -123,9 +123,9 @@ lsl fs fp =
                    in vsprintf "%c%s  1 %-8d %-8d %-9d" 
                                typechar
                                (showmodes (vFileMode se))
-                               (fromIntegral $ vFileOwner se)
-                               (fromIntegral $ vFileGroup se)
-                               (fromIntegral $ vFileSize se)
+                               (toInteger $ vFileOwner se)
+                               (toInteger $ vFileGroup se)
+                               (toInteger $ vFileSize se)
                                            
         in do c <- vGetDirectoryContents fs fp
               pairs <- mapM (\x -> do ss <- vGetSymbolicLinkStatus fs x
